// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component renders English correctly 1`] = `
<div>
  <nav
    class="sc-bdnxRM iDTZBF"
  >
    <div
      aria-controls="primary-menu"
      aria-expanded="false"
      class="sc-gtsrHT iyLpWA"
    >
      <div
        class="sc-dlnjwi fodIaX"
      />
      <div
        class="sc-dlnjwi fodIaX"
      />
      <div
        class="sc-dlnjwi fodIaX"
      />
    </div>
    <ul
      class="sc-hKFxyN jSDNlB"
      id="primary-menu"
    >
      <li
        class="sc-eCApnc exXzti"
      >
        <a
          class="sc-jSFjdj iFcKsM"
          href="/en"
        >
          Front Page
        </a>
      </li>
      <li
        class="sc-eCApnc exXzti"
      >
        <a
          class="sc-jSFjdj iFcKsM"
          href="/en/cv"
        >
          Curriculum Vitae
        </a>
      </li>
    </ul>
  </nav>
  ,
</div>
`;

exports[`Navigation component renders Finnish correctly 1`] = `
<div>
  <nav
    class="sc-bdnxRM iDTZBF"
  >
    <div
      aria-controls="primary-menu"
      aria-expanded="false"
      class="sc-gtsrHT iyLpWA"
    >
      <div
        class="sc-dlnjwi fodIaX"
      />
      <div
        class="sc-dlnjwi fodIaX"
      />
      <div
        class="sc-dlnjwi fodIaX"
      />
    </div>
    <ul
      class="sc-hKFxyN jSDNlB"
      id="primary-menu"
    >
      <li
        class="sc-eCApnc exXzti"
      >
        <a
          class="sc-jSFjdj iFcKsM"
          href="/"
        >
          Etusivu
        </a>
      </li>
      <li
        class="sc-eCApnc exXzti"
      >
        <a
          class="sc-jSFjdj iFcKsM"
          href="/ansioluettelo"
        >
          Ansioluettelo
        </a>
      </li>
    </ul>
  </nav>
  ,
</div>
`;
